--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
                 width: 150px;
                 height: 200px;
             }
+            .toe-fucked {
+                position: absolute;
+                top: 550px;
+                left: 1700;
+                width: 200px;
+                height: 250px;
+            }
+            .lighting-god {
+                position: absolute;
+                top: 585px;
+                left: 10px;
+                width: 200px;
+                height: 250px;
+            }
 
 
         </style>
@@ -52,5 +66,7 @@
         <a class="pregunta" href="https://docs.google.com/forms/d/e/1FAIpQLScgdGcC8VC4TP_z7M6Gwilpvw5i-Iu3DxDYuTU0yfnJSDfAaQ/viewform?usp=sf_link">Que debo añadir?</a>
         <img class="toe" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTPYXHKpcmkZZaoAk7VEkeX4lP_D1vsf3UJQ&s" alt="weird picture">
         <img class="watermelon-man" src="https://preview.redd.it/cursed-watermelon-v0-u35y98se1ykd1.png?auto=webp&s=c99ebb12ba1d2d0ad92ea794693347f6eafbb96f" alt="weird image">
+        <img class="toe-fucked" src="https://preview.redd.it/cursed-toes-v0-5rcsddwy2bjd1.jpeg?auto=webp&s=5eff615e890805b746a5cfeea6edb93fa2a39019" alt="weird image">
+        <img class="lighting-god" src="https://preview.redd.it/cursed-energy-v0-y3nutijjv6ed1.jpeg?width=1080&crop=smart&auto=webp&s=bfd6674a26aa13552c26146294087fc4ca49b59b" alt="weird image">
     </body>
 </html>
