--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             .pregunta {
                 display: flex;
                 margin-left: 45%;
+                margin-top: 100%;
             }
             .toe {
                 position: absolute;
@@ -68,5 +69,6 @@
         <img class="watermelon-man" src="https://preview.redd.it/cursed-watermelon-v0-u35y98se1ykd1.png?auto=webp&s=c99ebb12ba1d2d0ad92ea794693347f6eafbb96f" alt="weird image">
         <img class="toe-fucked" src="https://preview.redd.it/cursed-toes-v0-5rcsddwy2bjd1.jpeg?auto=webp&s=5eff615e890805b746a5cfeea6edb93fa2a39019" alt="weird image">
         <img class="lighting-god" src="https://preview.redd.it/cursed-energy-v0-y3nutijjv6ed1.jpeg?width=1080&crop=smart&auto=webp&s=bfd6674a26aa13552c26146294087fc4ca49b59b" alt="weird image">
+        <h3></h3>
     </body>
 </html>
